--- a/Bilverkstad/PresentationLager/MainWindow.xaml
+++ b/Bilverkstad/PresentationLager/MainWindow.xaml
@@ -1,9 +1,9 @@
-﻿<Window x:Class="Bilverkstad.MainWindow"
+﻿<Window x:Class="Bilverkstad.PresentationLager.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:Bilverkstad"
+        xmlns:local="clr-namespace:Bilverkstad.PresentationLager"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid RenderTransformOrigin="0.5,0.5">
