--- a/Bilverkstad1/PresentationLager/KundVy.xaml
+++ b/Bilverkstad1/PresentationLager/KundVy.xaml
@@ -79,17 +79,27 @@
                 </Button>
 
 
-                <Border Grid.Row="2" Background="#FF3E44C8" CornerRadius="0 50 0 30">
+                <Border Grid.Row="2" Background="#FF3E44C8" CornerRadius="0 50 0 0">
                     <DockPanel>
                         <StackPanel DockPanel.Dock="Top">
-                            <Button Style="{StaticResource ButtonMenu}" Margin="40,70,40,0"
-                                    Content="Kunder" Click="Button_Click" />
-                            <Button Style="{StaticResource ButtonMenu}"
-                                     Content="Ny Kund" Click="BtnNykund_Click" />
-                            <Button Style="{StaticResource ButtonMenu}"
-                                    Content="Uppdatera" Click="BtnUppdatera_Click" />
-                            <Button Style="{StaticResource ButtonMenu}"
-                                    Content="Spara" Click="BtnSpara_Click" />
+                            <Button Style="{StaticResource ButtonMenu}" Margin="10,70,10,0"
+                                     Content="Ny Kund" Click="BtnNykund_Click" Background="#FF6067F1" FontSize="12" >
+                                <Button.Effect>
+                                    <DropShadowEffect BlurRadius="15" Opacity="0.5" Direction="270" ShadowDepth="3" Color="#FF272727"/>
+                                </Button.Effect>
+                            </Button>
+                            <Button Style="{StaticResource ButtonMenu}"  Margin="10,20,10,0"
+                                    Content="Uppdatera" Click="BtnUppdatera_Click" Background="#FF6067F1" FontSize="12" >
+                                <Button.Effect>
+                                    <DropShadowEffect BlurRadius="15" Opacity="0.5" Direction="270" ShadowDepth="3" Color="#FF272727"/>
+                                </Button.Effect>
+                            </Button>
+                            <Button Style="{StaticResource ButtonMenu}"  Margin="10,20,10,0"
+                                    Content="Spara" Click="BtnSpara_Click" Background="#FF6067F1" FontSize="12" >
+                                <Button.Effect>
+                                    <DropShadowEffect BlurRadius="15" Opacity="0.5" Direction="270" ShadowDepth="3" Color="#FF272727"/>
+                                </Button.Effect>
+                            </Button>
 
 
                         </StackPanel>
@@ -181,7 +191,7 @@
                           CellStyle="{DynamicResource DataGridCellStyle1}" 
                           ColumnHeaderStyle="{DynamicResource DataGridColumnHeaderStyle1}" 
                           RowStyle="{DynamicResource DataGridRowStyle1}" 
-                          Grid.Row="2" Margin="0,0,10,0">
+                          Grid.Row="2" Margin="0,0,10,0" SelectionChanged="KunderDataGrid_SelectionChanged_1">
                     <DataGrid.Columns>
                         <DataGridCheckBoxColumn CanUserResize="False" Width="auto" >
                             <DataGridCheckBoxColumn.HeaderTemplate>
