--- a/Bilverkstad1/PresentationLager/ReservDelVy.xaml
+++ b/Bilverkstad1/PresentationLager/ReservDelVy.xaml
@@ -83,19 +83,19 @@
                     <DockPanel>
                         <StackPanel DockPanel.Dock="Top">
                             <Button Style="{StaticResource ButtonMenu}" Margin="10,70,10,0"
-                                     Content="Ny Reservdel" Click="BtnNyReservdel_Click" Background="#FF6067F1" FontSize="12" >
+                                     Content="Ny Reservdel" Click="BtnNyReservdel_Click"  FontSize="12" >
                                 <Button.Effect>
                                     <DropShadowEffect BlurRadius="15" Opacity="0.5" Direction="270" ShadowDepth="3" Color="#FF272727"/>
                                 </Button.Effect>
                             </Button>
                             <Button Style="{StaticResource ButtonMenu}"  Margin="10,20,10,0"
-                                    Content="Uppdatera" Click="BtnUppdatera_Click" Background="#FF6067F1" FontSize="12" >
+                                    Content="Uppdatera" Click="BtnUppdatera_Click"  FontSize="12" >
                                 <Button.Effect>
                                     <DropShadowEffect BlurRadius="15" Opacity="0.5" Direction="270" ShadowDepth="3" Color="#FF272727"/>
                                 </Button.Effect>
                             </Button>
                             <Button Style="{StaticResource ButtonMenu}"  Margin="10,20,10,0"
-                                    Content="Spara" Click="BtnSpara_Click" Background="#FF6067F1" FontSize="12" >
+                                    Content="Spara" Click="BtnSpara_Click"  FontSize="12" >
                                 <Button.Effect>
                                     <DropShadowEffect BlurRadius="15" Opacity="0.5" Direction="270" ShadowDepth="3" Color="#FF272727"/>
                                 </Button.Effect>
@@ -179,12 +179,12 @@
                     <Label Content="Lager Status" HorizontalAlignment="Left" Height="35" Margin="302,102,0,0" VerticalAlignment="Top" Width="92"/>
 
                 </Grid>
-                <DataGrid x:Name="KunderDataGrid"
+                <DataGrid x:Name="ReservDelDataGrid"
                           Style="{DynamicResource DataGridStyle1}" 
                           CellStyle="{DynamicResource DataGridCellStyle1}" 
                           ColumnHeaderStyle="{DynamicResource DataGridColumnHeaderStyle1}" 
                           RowStyle="{DynamicResource DataGridRowStyle1}" 
-                          Grid.Row="2" Margin="0,0,10,0" SelectionChanged="KunderDataGrid_SelectionChanged_1">
+                          Grid.Row="2" Margin="0,0,10,0" SelectionChanged="ReservDelDataGrid_SelectionChanged_1">
                     <DataGrid.Columns>
                         <DataGridCheckBoxColumn CanUserResize="False" Width="auto" >
                             <DataGridCheckBoxColumn.HeaderTemplate>
