--- a/Bilverkstad1/App.xaml
+++ b/Bilverkstad1/App.xaml
@@ -12,8 +12,9 @@
             <Setter Property="Foreground" Value="#FF0A0745"/>
             <Setter Property="FocusVisualStyle" Value="{x:Null}"/>
             <Setter Property="Height" Value="40"/>
-            <Setter Property="FontSize" Value="13"/>   
+            <Setter Property="FontSize" Value="14"/>   
             <Setter Property="Cursor" Value="Hand"/>
+            <Setter Property="FontWeight" Value="Bold"/>
             <Setter Property="Template">
                 <Setter.Value>
                     <ControlTemplate TargetType="Button">
@@ -34,7 +35,7 @@
 
         <Style x:Key="TextBoxInput"  TargetType="TextBox">
             <Setter Property="Background" Value="Transparent"/>
-            <Setter Property="Foreground" Value="LightGray"/>
+            <Setter Property="Foreground" Value="Black"/>
             <Setter Property="FocusVisualStyle" Value="{x:Null}"/>
             <Setter Property="Height" Value="20"/>
             <Setter Property="FontSize" Value="13"/>
