--- a/Bilverkstad1/PresentationLager/KundVy.xaml
+++ b/Bilverkstad1/PresentationLager/KundVy.xaml
@@ -83,19 +83,19 @@
                     <DockPanel>
                         <StackPanel DockPanel.Dock="Top">
                             <Button Style="{StaticResource ButtonMenu}" Margin="10,70,10,0"
-                                     Content="Ny Kund" Click="BtnNykund_Click" Background="#FF6067F1" FontSize="12" >
+                                     Content="Ny Kund" Click="BtnNykund_Click" >
                                 <Button.Effect>
                                     <DropShadowEffect BlurRadius="15" Opacity="0.5" Direction="270" ShadowDepth="3" Color="#FF272727"/>
                                 </Button.Effect>
                             </Button>
                             <Button Style="{StaticResource ButtonMenu}"  Margin="10,20,10,0"
-                                    Content="Uppdatera" Click="BtnUppdatera_Click" Background="#FF6067F1" FontSize="12" >
+                                    Content="Uppdatera" Click="BtnUppdatera_Click" >
                                 <Button.Effect>
                                     <DropShadowEffect BlurRadius="15" Opacity="0.5" Direction="270" ShadowDepth="3" Color="#FF272727"/>
                                 </Button.Effect>
                             </Button>
                             <Button Style="{StaticResource ButtonMenu}"  Margin="10,20,10,0"
-                                    Content="Spara" Click="BtnSpara_Click" Background="#FF6067F1" FontSize="12" >
+                                    Content="Spara" Click="BtnSpara_Click" >
                                 <Button.Effect>
                                     <DropShadowEffect BlurRadius="15" Opacity="0.5" Direction="270" ShadowDepth="3" Color="#FF272727"/>
                                 </Button.Effect>
