--- a/Bilverkstad1/PresentationLager/KundVy.xaml
+++ b/Bilverkstad1/PresentationLager/KundVy.xaml
@@ -82,20 +82,14 @@
                 <Border Grid.Row="2" Background="#FF3E44C8" CornerRadius="0 50 0 0">
                     <DockPanel>
                         <StackPanel DockPanel.Dock="Top">
-                            <Button Style="{StaticResource ButtonMenu}" Margin="10,70,10,0"
+                            <Button Style="{StaticResource ButtonMenu}" Margin="10,70,10,0" Name="BtnNykund"
                                      Content="Ny Kund" Click="BtnNykund_Click" Background="#FF6067F1" FontSize="12" >
                                 <Button.Effect>
                                     <DropShadowEffect BlurRadius="15" Opacity="0.5" Direction="270" ShadowDepth="3" Color="#FF272727"/>
                                 </Button.Effect>
                             </Button>
-                            <Button Style="{StaticResource ButtonMenu}"  Margin="10,20,10,0"
+                            <Button Style="{StaticResource ButtonMenu}"  Margin="10,20,10,0" Name="BtnUppdatera"
                                     Content="Uppdatera" Click="BtnUppdatera_Click" Background="#FF6067F1" FontSize="12" >
-                                <Button.Effect>
-                                    <DropShadowEffect BlurRadius="15" Opacity="0.5" Direction="270" ShadowDepth="3" Color="#FF272727"/>
-                                </Button.Effect>
-                            </Button>
-                            <Button Style="{StaticResource ButtonMenu}"  Margin="10,20,10,0"
-                                    Content="Spara" Click="BtnSpara_Click" Background="#FF6067F1" FontSize="12" >
                                 <Button.Effect>
                                     <DropShadowEffect BlurRadius="15" Opacity="0.5" Direction="270" ShadowDepth="3" Color="#FF272727"/>
                                 </Button.Effect>
@@ -136,11 +130,10 @@
                              x:Name="txtSearch" Height="18" 
                              Margin="464,10,10,0" VerticalAlignment="Top" TextChanged="txtSearch_TextChanged" />
                     <TextBox Style="{StaticResource TextBoxInput}" 
-                             Text="Skriv"
                              x:Name="Namn"
                              HorizontalAlignment="Left" 
                              Margin="150,42,0,0" 
-                             VerticalAlignment="Top"
+                             VerticalAlignment="Top" TextChanged="Namn_TextChanged" Foreground="Black"
                             />
                     <Label Content="Namn" 
                            Foreground="Black"
@@ -151,38 +144,35 @@
                            VerticalAlignment="Top" 
                            Width="61"/>
                     <Label Content="Personnummer" 
+                           Name="PersonnummerLbl"
                            HorizontalAlignment="Left" 
                            Height="24" Margin="19,75,0,0" 
                            VerticalAlignment="Top" 
                            Width="101"/>
                     <TextBox Style="{StaticResource TextBoxInput}" 
-                             Text="Skriv"
                              x:Name="Personnummer"
                              HorizontalAlignment="Left" 
                              Margin="150,79,0,0" 
-                             VerticalAlignment="Top" 
+                             VerticalAlignment="Top" Foreground="Black"
                             />
                     <TextBox Style="{StaticResource TextBoxInput}" 
-                             Text="Skriv"
                              x:Name="Adress"
                              HorizontalAlignment="Left" 
                              Margin="150,119,0,0" 
-                             VerticalAlignment="Top"/>
+                             VerticalAlignment="Top" TextChanged="Adress_TextChanged" Foreground="Black"/>
                     <Label Content="Adress" HorizontalAlignment="Left" Height="24" Margin="19,107,0,0" VerticalAlignment="Top" Width="61"/>
-                    <Label Content="TelefonNr" HorizontalAlignment="Left" Height="24" Margin="320,42,0,0" VerticalAlignment="Top" Width="61"/>
+                    <Label Content="TelefonNr" HorizontalAlignment="Left" Height="24" Margin="320,42,0,0" VerticalAlignment="Top" Width="61" Name="TelefonnrLbl"/>
                     <TextBox Style="{StaticResource TextBoxInput}" 
-                             Text="Skriv"
                              x:Name="Epost"
                              HorizontalAlignment="Left" 
                              Margin="405,90,0,0" 
-                             VerticalAlignment="Top"/>
+                             VerticalAlignment="Top" TextChanged="Epost_TextChanged" Foreground="Black"/>
                     <TextBox Style="{StaticResource TextBoxInput}" 
-                             Text="Skriv"
                              x:Name="TelefonNr"
                              HorizontalAlignment="Left" 
                              Height="16" 
                              Margin="405,46,0,0" 
-                             VerticalAlignment="Top"/>
+                             VerticalAlignment="Top" TextChanged="TelefonNr_TextChanged" Foreground="Black"/>
                     <Label Content="E-post" HorizontalAlignment="Left" Height="24" Margin="320,81,0,0" VerticalAlignment="Top" Width="61"/>
 
                 </Grid>
@@ -190,31 +180,26 @@
                           Style="{DynamicResource DataGridStyle1}" 
                           CellStyle="{DynamicResource DataGridCellStyle1}" 
                           ColumnHeaderStyle="{DynamicResource DataGridColumnHeaderStyle1}" 
-                          RowStyle="{DynamicResource DataGridRowStyle1}" 
-                          Grid.Row="2" Margin="0,0,10,0" SelectionChanged="KunderDataGrid_SelectionChanged_1">
+                          Grid.Row="2" Margin="0,0,10,0"
+                          IsReadOnly="true">
+
+                    <DataGrid.RowStyle>
+                        
+                        <Style TargetType="DataGridRow">
+                            <EventSetter Event="PreviewMouseLeftButtonDown" Handler="KolumnRubrik_OnClick"/>
+                        </Style>
+                    </DataGrid.RowStyle>
                     <DataGrid.Columns>
-                        <DataGridCheckBoxColumn CanUserResize="False" Width="auto" >
+                        <DataGridCheckBoxColumn CanUserResize="False" Width="auto">
                             <DataGridCheckBoxColumn.HeaderTemplate>
                                 <DataTemplate>
                                     <CheckBox/>
                                 </DataTemplate>
                             </DataGridCheckBoxColumn.HeaderTemplate>
                         </DataGridCheckBoxColumn>
-
-                        <DataGridTextColumn Header="KundNr" IsReadOnly="True" Width="auto" CanUserReorder="False"/>
-                        <DataGridTextColumn Header="Namn" IsReadOnly="True" Width="*"/>
-                        <DataGridTextColumn Header="Personnummer" IsReadOnly="True" Width="*"/>
-                        <DataGridTextColumn Header="Adress" IsReadOnly="True" Width="*"/>
-                        <DataGridTextColumn Header="TelefoneNr" IsReadOnly="True" Width="*"/>
-                        <DataGridTextColumn Header="E-post" IsReadOnly="True" Width="*"/>
-                        <DataGridTextColumn Header="Bokning" IsReadOnly="True" Width="*"/>
-
-
-
                     </DataGrid.Columns>
-
-
                 </DataGrid>
+
 
 
             </Grid>
