--- a/Bilverkstad1/PresentationLager/BokningVy.xaml
+++ b/Bilverkstad1/PresentationLager/BokningVy.xaml
@@ -5,8 +5,233 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Bilverkstad.PresentationLager"
         mc:Ignorable="d"
-        Title="BokningVy" Height="450" Width="800">
-    <Grid>
-        
-    </Grid>
+        Title="BokningVy" Height="450" Width="800"
+         WindowStyle="None"
+         ResizeMode="NoResize"
+        WindowStartupLocation="CenterScreen"
+        Background="Transparent"
+        AllowsTransparency="True"
+        MouseDown="Window_MouseDown">
+    <Border CornerRadius="50">
+        <Border.Background>
+            <ImageBrush ImageSource="/Images/background_bilverkstad.jpg" 
+                    Stretch="None" Opacity="0.73"
+                    />
+        </Border.Background>
+        <Border CornerRadius="20"
+        BorderThickness="2"
+                Opacity="0.95">
+            <Border.BorderBrush>
+                <LinearGradientBrush StartPoint="0,0" EndPoint="1,1">
+                    <GradientStop Color = "#FF4157AF" Offset="0"/>
+                    <GradientStop Color = "#FFD914A6" Offset="0.75"/>
+                    <GradientStop Color = "#FF8823A7" Offset="1"/>
+                </LinearGradientBrush>
+            </Border.BorderBrush>
+            <Border.Background>
+
+                <LinearGradientBrush StartPoint="0,1" EndPoint="1,0">
+                    <GradientStop Color = "#CC5C0B5B" Offset="0"/>
+                    <GradientStop Color = "#CC12114F" Offset="1"/>
+                </LinearGradientBrush>
+            </Border.Background>
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="30"></RowDefinition>
+                    <RowDefinition Height="150"></RowDefinition>
+
+                    <RowDefinition/>
+
+                </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition />
+                    <ColumnDefinition Width="25"/>
+                    <ColumnDefinition Width="25"/>
+                    <ColumnDefinition Width="5"/>
+                </Grid.ColumnDefinitions>
+                <TextBlock Text="LOG IN"
+                       Foreground="DarkGray"
+                       FontSize="12"
+                       FontFamily="Montserrat"
+                       Grid.Column="0"
+                       VerticalAlignment="Center"
+                       Margin="10,0,0,0"/>
+                <Button x:Name="BtnMinimize"
+                    BorderThickness="0"
+                    Content="-"
+                    Foreground="White"
+                    FontSize="12"
+                    Cursor="Hand"
+                    Grid.Column="1" 
+                    Click="BtnMinimize_Click" 
+                    Background="#FF13A4B8" Height="30" VerticalAlignment="Top">
+
+                    <Button.Template>
+                        <ControlTemplate TargetType="Button">
+                            <Border Width="18" Height="18"
+                                CornerRadius="9"
+                                Background= "#FF13A4B8">
+                                <ContentPresenter VerticalAlignment="Center"
+                                              HorizontalAlignment="Center"/>
+                            </Border>
+                        </ControlTemplate>
+                    </Button.Template>
+                </Button>
+                <Button x:Name="BtnClose"
+                    BorderThickness="0"
+                    Content="X"
+                    Foreground="White"
+                    FontSize="12"
+                    Cursor="Hand"
+                    Grid.Column="2"
+                    Click="BtnClose_Click" 
+                    Background="#FF953707">
+
+                    <Button.Template>
+                        <ControlTemplate TargetType="Button">
+                            <Border Width="18" Height="18"
+                                CornerRadius="9"
+                                Background="#FF953707">
+                                <ContentPresenter VerticalAlignment="Center"
+                           HorizontalAlignment="Center"/>
+                            </Border>
+                        </ControlTemplate>
+                    </Button.Template>
+
+                </Button>
+
+
+                <Image Source="/Images/121212-rem.png" Height="92"
+                       Width="200" Opacity="0.6"
+                       Margin="2,4,539,4" 
+                       Grid.Row="1"/>
+
+                <Label Content="Datum" 
+                   Foreground="LightGray"
+                   FontSize="12"
+                   Margin="198,50,0,0"
+                   HorizontalAlignment="Left" 
+                   Height="25" 
+                   Grid.Row="1"
+                   VerticalAlignment="Top" 
+                   Width="200"/>
+                <TextBox x:Name="textUser"
+                     FontSize="13"
+                     Foreground="White"
+                     CaretBrush="LightGray"
+                     BorderBrush="DarkGray"
+                     BorderThickness="0,0,0,1"
+                     HorizontalAlignment="Left" 
+                     Height="20" 
+                     Margin="398,30,0,0"
+                     Grid.Row="1" 
+                     VerticalAlignment="Top" 
+                     Width="214" TextChanged="textUser_TextChanged"
+                    >
+
+                    <TextBox.Background>
+                        <ImageBrush
+                                Stretch="Uniform" 
+                                AlignmentX="Left"/>
+                    </TextBox.Background>
+                </TextBox>
+
+
+                <Label  Content="Password" 
+                   Foreground="LightGray"
+                   FontSize="12"
+                   Margin="198,15,0,0"
+                   HorizontalAlignment="Left" 
+                   Height="25" 
+                   Grid.Row="1"
+                   VerticalAlignment="Top" 
+                   Width="200"/>
+
+
+
+                <Button Content="Boka Tid" 
+                    HorizontalAlignment="Left" 
+                    Margin="10,43,0,0" 
+                    Cursor="Hand"
+                    Grid.Row="2" 
+                    Grid.Column="0"    
+                    VerticalAlignment="Top" 
+                    Click="Btnlogin_Click">
+                    <Button.Template>
+                        <ControlTemplate TargetType="Button">
+                            <Border Width="150" Height="40"
+                                CornerRadius="20" Opacity="0.9">
+                                <Border.Background>
+                                    <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                                        <GradientStop Color="#FF193987"/>
+                                        <GradientStop Color="#FFBE17CD" Offset="1"/>
+                                    </LinearGradientBrush>
+                                </Border.Background>
+
+                                <ContentPresenter VerticalAlignment="Center"
+                                              HorizontalAlignment="Center"/>
+                            </Border>
+                        </ControlTemplate>
+                    </Button.Template>
+
+                </Button> 
+                <Button Content="Avboka " 
+                    HorizontalAlignment="Left" 
+                    Margin="16,129,0,0" 
+                    Cursor="Hand"
+                    Grid.Row="2" 
+                    Grid.Column="0"    
+                    VerticalAlignment="Top" 
+                    Click="Btnlogin_Click">
+                    <Button.Template>
+                        <ControlTemplate TargetType="{x:Type Button}">
+                            <Border Width="150" Height="40"
+                                CornerRadius="20" Opacity="0.9">
+                                <Border.Background>
+                                    <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                                        <GradientStop Color="#FF193987"/>
+                                        <GradientStop Color="#FFBE17CD" Offset="1"/>
+                                    </LinearGradientBrush>
+                                </Border.Background>
+
+                                <ContentPresenter VerticalAlignment="Center"
+                                    HorizontalAlignment="Center"/>
+                            </Border>
+                        </ControlTemplate>
+                    </Button.Template>
+
+                </Button>
+
+                <DataGrid 
+                         Style="{DynamicResource DataGridStyle1}" 
+                         CellStyle="{DynamicResource DataGridCellStyle1}" 
+                         ColumnHeaderStyle="{DynamicResource DataGridColumnHeaderStyle1}" 
+                         RowStyle="{DynamicResource DataGridRowStyle1}" 
+                         Grid.Column="0" 
+                         HorizontalAlignment="Left" 
+                         Height="254" Margin="204,2,0,0" 
+                         Grid.Row="2" VerticalAlignment="Top"
+                         Width="582" Grid.ColumnSpan="3"  >
+                    <DataGrid.Columns>
+                        <DataGridCheckBoxColumn CanUserResize="False" Width="auto" >
+                            <DataGridCheckBoxColumn.HeaderTemplate>
+                                <DataTemplate>
+                                    <CheckBox/>
+                                </DataTemplate>
+                            </DataGridCheckBoxColumn.HeaderTemplate>
+                        </DataGridCheckBoxColumn>
+
+
+                    </DataGrid.Columns>
+
+
+                </DataGrid>
+
+
+            </Grid>
+
+        </Border>
+    </Border>
+
+
 </Window>
